@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Extended `oq engine --lhc` to show the calculation_mode
+
   [Christopher Brooks]
   * Refactored conditional GMPEs to be specifiable within ModifiableGMPE
     on a per-IMT basis (safer handling, more flexibility).
